# StrategicWorkforcePlanningCrowdDelivery

./: .gitignore  README.md
cpp/: CMakeLists.txt  conanfile.txt
cpp/cmake/: Conan.cmake  FindGUROBI.cmake
cpp/include/: operational_model_cd.hpp  operational_model_costs.hpp  utils_cd.hpp  utils_costs.hpp
cpp/src/: cd_cpp.cpp  costs_cpp.cpp
data/: 009_009.csv  demand_arrival_patterns.npy  demand_arrival_patterns.txt  mob_pat.txt  od_matrix.npy  od_matrix.txt  req_pat.npy  req_pat.txt  route_pat.txt
results/009_009/: c1.npy  c_empty_routing.npy  constants.txt  demand.npy  mu.npy
src/: main.py  requirements.txt
src/BDP/: backward_DP.py  psi_calculation.py  psi_calculation_cy.c  psi_calculation_cy.pyx  setup.py
src/PVFA/: piecewise_linear_approx.py  setup_fluid_model.py
src/common/: _brent.py  brute_force.py  configuration.py  cost_calculation.py  csv_operations.py  find_paths.py  method_parameters.py  model_creation.py  revenue_calculation.py  save_instance.py  state_transfer_fct.py
